src/styles/Menu.scss
@import 'vars';
.desktop-menu {
    width: 100px;
    height: auto;
    border: 1px solid $very-light-pink;
    border-radius: 0px 0px 6px 6px;
    padding: 20px 20px 0 20px;
    position: absolute;
    top: 100px;
}

.desktop-menu ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.desktop-menu ul li {
    text-align: end;
}

.desktop-menu ul li:nth-child(1),
.desktop-menu ul li:nth-child(2) {
    font-weight: bold;
}

.desktop-menu ul li:last-child {
    padding-top: 20px;
    border-top: 1px solid $very-light-pink;
}

.desktop-menu ul li:last-child a {
    color: $hospital-green;
    font-size: $sm;
}

.desktop-menu ul li a {
    color: $black;
    text-decoration: none;
    /*   margin-bottom: 20px; */
    display: inline-block;
}

